--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
             <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">You can find me in</p>
             <div align="center">
                <a href="https://github.com/Rabios"><img src="images/GitHub-Mark-120px-plus.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-               <a href="https://discord.gg/VkzNHUE"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+               <!--<a href="https://discord.gg/YacWDGZG"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
+               <a href="https://discord.gg/6asrfg6K"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                <a href="https://rabios.itch.io"><img src="images/itchio-textless-black.svg" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                <a href="https://www.facebook.com/rabia.alhaffar.9"><img src="images/facebook.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                <a href="https://www.youtube.com/channel/UCAyNQlH9PxhYpXHukRmM-dg"><img src="images/youtube.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>     
