--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,8 @@
             <div align="center">
                 <img src="images/rayport.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(0);">
                 <img src="images/raylua.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(1);">
-                <img src="images/crosskit_logo_new.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(2);">
+                <!--<img src="images/crosskit_logo_new.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(2);">-->
+                <img src="images/pancake.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(5);">
                 <img src="images/clua_logo.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(3);">
                 <img src="images/steria773_archive.png" width="96" height="96" style="margin: 8px; padding: 8px;" onclick="project_info(4);">
             </div>
