--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,8 @@
         </div>
 
         <div style="background-color: blueviolet; margin: 8px; padding: 8px; border-radius: 30px;">
-            <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">COMING SOON...</p>
+            <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 32px;" align="center">BLOG</p>
+            <a href="blogs/blog-13-february-2021.html" style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">13/February/2020 - HELLO WORLD!</a>
         </div>
     </body>
 </html>
