Fixed funny haxe link mistake

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="images/javascript-js-logo-2949701702-seeklogo.com.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
                 <!--<a href="http://chaiscript.com"><img src="images/chaiscript.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>-->
                 <a href="https://ruby-lang.org"><img src="images/ruby.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
-                <a href="https://ruby-lang.org"><img src="images/haxe.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
+                <a href="https://haxe.org"><img src="images/haxe.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
 			</div>
 			<p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">
                 And learning assembly...
