Fixed OpenSenet game site link!

--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
 
         <div style="background-color: blueviolet; margin: 8px; padding: 8px; border-radius: 30px;">
             <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">Here is some of my games (Click on image for game page)</p>
-            <a href="https://github.com/Rabios/Tyrius"><img src="images/tyrius.png" style="width: 50%;"></a><a href="https://rabios.itch.io/lines"><img src="images/lines.png" style="width: 50%;"></a><a href="https://github.com/Rabios/raytaiko"><img src="images/raytaiko.png" style="width: 50%; height: 50%;"></a><a href="https://github.com/Rabios/TARGET"><img src="images/target.png" style="width: 50%;"></a><a href="https://github.com/Rabios/ICECREAMBOY"><img src="images/icecreamboy.png" style="width: 50%;"></a><a href="https://rabios.github.io/opensenet"><img src="images/opensenet.png" style="width: 50%;"></a><a href="https://rabios.itch.io/cakestack"><img src="images/cakestack.png" style="width: 50%;"></a>
+            <a href="https://github.com/Rabios/Tyrius"><img src="images/tyrius.png" style="width: 50%;"></a><a href="https://rabios.itch.io/lines"><img src="images/lines.png" style="width: 50%;"></a><a href="https://github.com/Rabios/raytaiko"><img src="images/raytaiko.png" style="width: 50%; height: 50%;"></a><a href="https://github.com/Rabios/TARGET"><img src="images/target.png" style="width: 50%;"></a><a href="https://github.com/Rabios/ICECREAMBOY"><img src="images/icecreamboy.png" style="width: 50%;"></a><a href="https://rabios.itch.io/opensenet"><img src="images/opensenet.png" style="width: 50%;"></a><a href="https://rabios.itch.io/cakestack"><img src="images/cakestack.png" style="width: 50%;"></a>
         </div>
     </body>
 </html>
