Updated the Website!

--- a/blog.html
+++ b/blog.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <title>steria773 - Blog</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet">
+        <link href="fonts.css" rel="stylesheet">
         <link href="images/b1fd3038e0a7c3f9a8c1d16249b85d6000.png" type="image/png" rel="icon">
     </head>
     <body>
         <script src="bubbly-bg.js"></script>
         <script src="script.js"></script>
+
         <div id="banner" style="background-color: purple; margin: 8px; padding: 8px; border-radius: 30px;">
-            <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><img src="images/b1fd3038e0a7c3f9a8c1d16249b85d60.png" align="center" width="96" height="96" style="padding: 8px; margin: 8px;"></a>
+            <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><img src="images/b1fd3038e0a7c3f9a8c1d16249b85d60.png" align="center" width="96" height="96" style="border-radius: 30px; padding: 8px; margin: 8px;"></a>
             <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;">STERIA773</a>
             <a href="projects.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">PROJECTS</button></a>
             <a href="games.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">GAMES</button></a>
@@ -19,8 +21,10 @@
         </div>
 
         <div style="background-color: blueviolet; margin: 8px; padding: 8px; border-radius: 30px;">
-            <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 32px;" align="center">BLOG</p>
-            <a href="blogs/blog-13-february-2021.html" style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">13/February/2020 - HELLO WORLD!</a>
+            <p style="color: white; font-family: 'pixelated'; padding: 8px; margin: 8px; font-size: 48px; text-align: center;">BLOG</p><hr style="color: white; margin: 8px;"><br>
+            <a href="blogs/blog-7-may-2021.html" style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">7/May/2021 - WEBSITE UPDATED!</a>
+            <br>
+            <a href="blogs/blog-13-february-2021.html" style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">13/February/2021 - HELLO WORLD!</a>
         </div>
     </body>
 </html>
