--- a/blogs/blog-7-may-2021.html
+++ b/blogs/blog-7-may-2021.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>steria773 - [BLOG] HELLO WORLD!</title>
+        <title>steria773 - [BLOG] WEBSITE UPDATED!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="fonts.css" rel="stylesheet">
+        <link href="../fonts.css" rel="stylesheet">
         <link href="../images/b1fd3038e0a7c3f9a8c1d16249b85d6000.png" type="image/png" rel="icon">
     </head>
     <body>
@@ -21,8 +21,12 @@
         </div>
 
         <div style="background-color: blueviolet; margin: 8px; padding: 8px; border-radius: 30px;">
-            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 52px;" align="center">HELLO WORLD!</p>
-            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 22px;">The first blog, Awaiting for more achievements!</p>
+            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 52px;" align="center">Website Updated!</p><hr style="color: white; margin: 8px;">
+            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 22px;">I'm very happy to announce that i redesigned most parts of the Website, As you see there are visual improvements like:</p>
+            <br>
+            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 22px;">1. Redesigned games and projects page to work dynamically via JavaScript, Also i improved style of the games page and replaced that old s****ty style with newer and better one that has game image on left side and info on the right side of the page, Making it visually better.</p>
+            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 22px;">2. I provided labels for each page at center of it, I also considered putting labels for some stuff!</p>
+            <p style="color: white; font-family: 'quicksand'; padding: 8px; font-size: 22px;">3. Random codes now uses GitHub Gist embedding via files containing random code and this removed Website's dependency on highlight.js and long strings usage, Thanks <a href="https://github.com/jeremiahlee">Jeremiah Lee</a> for the implementation from <a href="https://gist.github.com/jeremiahlee/1748966">this</a> gist!</p>
         </div>
     </body>
 </html>
