--- a/about.html
+++ b/about.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <title>steria773 - More</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet">
+        <link href="fonts.css" rel="stylesheet">
         <link href="images/b1fd3038e0a7c3f9a8c1d16249b85d6000.png" type="image/png" rel="icon">
     </head>
     <body>
         <script src="bubbly-bg.js"></script>
         <script src="script.js"></script>
+
         <div id="banner" style="background-color: purple; margin: 8px; padding: 8px; border-radius: 30px;">
-            <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><img src="images/b1fd3038e0a7c3f9a8c1d16249b85d60.png" align="center" width="96" height="96" style="padding: 8px; margin: 8px;"></a>
+            <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><img src="images/b1fd3038e0a7c3f9a8c1d16249b85d60.png" align="center" width="96" height="96" style="border-radius: 30px; padding: 8px; margin: 8px;"></a>
             <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;">STERIA773</a>
             <a href="projects.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">PROJECTS</button></a>
             <a href="games.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">GAMES</button></a>
@@ -19,21 +21,18 @@
         </div>
 
         <div style="background-color: blueviolet; margin: 8px; padding: 8px; border-radius: 30px;">
-            <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">You can find me in</p>
+            <p style="color: white; font-family: 'pixelated'; padding: 8px; margin: 8px; font-size: 48px; text-align: center;">FOLLOW ME</p><hr style="color: white; margin: 8px;"><br>
             <div align="center">
-               <a href="https://github.com/Rabios"><img src="images/GitHub-Mark-120px-plus.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-               <!--<a href="https://discord.gg/YacWDGZG"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
-               <a href="https://discord.gg/6asrfg6K"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-               <a href="https://rabios.itch.io"><img src="images/itchio-textless-black.svg" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-               <a href="https://www.facebook.com/rabia.alhaffar.9"><img src="images/facebook.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-               <a href="https://www.youtube.com/channel/UCAyNQlH9PxhYpXHukRmM-dg"><img src="images/youtube.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>     
-               <a href="https://www.sololearn.com/Profile/9046029"><img src="images/sololearn.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <a href="https://github.com/Rabios"><img src="images/GitHub-Mark-120px-plus.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <!--<a href="https://discord.gg/YacWDGZG"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
+                <!--<a href="https://discord.gg/6asrfg6K"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
+                <a href="https://rabios.itch.io"><img src="images/itchio-textless-black.svg" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <a href="https://www.facebook.com/rabia.alhaffar.9"><img src="images/facebook.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <a href="https://www.youtube.com/channel/UCAyNQlH9PxhYpXHukRmM-dg"><img src="images/youtube.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>     
+                <a href="https://www.sololearn.com/Profile/9046029"><img src="images/sololearn.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <br>
+                <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">Email: <a href="mailto:steria773@gmail.com">steria773@gmail.com</a></p>
             </div>
         </div>
-
-        <div style="background-color: plum; margin: 8px; padding: 8px; border-radius: 30px;">
-            <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">Email: <a href="mailto:steria773@gmail.com">steria773@gmail.com</a></p>
-        </div>
-
     </body>
 </html>
