--- a/blogs/blog-13-february-2021.html
+++ b/blogs/blog-13-february-2021.html
@@ -4,7 +4,7 @@
         <title>steria773 - [BLOG] HELLO WORLD!</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="fonts.css" rel="stylesheet">
+        <link href="../fonts.css" rel="stylesheet">
         <link href="../images/b1fd3038e0a7c3f9a8c1d16249b85d6000.png" type="image/png" rel="icon">
     </head>
     <body>
