UPDATE: Added COLOLINKS! and update projects list!

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <p style="color: white; font-family: 'pixelated'; padding: 8px; margin: 8px; font-size: 48px; text-align: center;">FOLLOW ME</p><hr style="color: white; margin: 8px;"><br>
             <div align="center">
                 <a href="https://github.com/Rabios"><img src="images/GitHub-Mark-120px-plus.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
-                <!--<a href="https://discord.gg/YacWDGZG"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
+                <a href="https://discord.gg/UgZDGq6yQM"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                 <!--<a href="https://discord.gg/6asrfg6K"><img src="images/discord.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
                 <a href="https://rabios.itch.io"><img src="images/itchio-textless-black.svg" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                 <a href="https://www.facebook.com/rabia.alhaffar.9"><img src="images/facebook.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
