--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
             <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">
             I'm Rabia Alhaffar, Syrian indie game developer and making games is my favourite hobby!
             <br><br>
-            I also work as front-end Web developer, And sometimes write softwares or web things when i'm in right mood!
+            I also work as front-end Web developer, And sometimes write softwares or make web things when i'm in right mood!
             <br><br>
-            I have a lot of nicknames like "Rabios" and "steria773", You Call me what you want! ;)
+            I have a lot of nicknames like "Rabios" and "steria773", You call me what you want! ;)
             </p>
         </div>
         
         <div style="background-color: plum; margin: 8px; padding: 8px; border-radius: 30px;">
             <p style="color: white; font-family: 'pixelated'; padding: 8px; margin: 8px; font-size: 32px; text-align: center;">I MAKE GAMES WITH</p><hr style="color: white; margin: 8px;"><br>
             <div align="center">
+                <a href="https://dragonruby.org"><img src="images/dragonruby_icon.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
                 <a href="https://www.raylib.com"><img src="images/raylib.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
                 <a href="https://github.com/SasLuca/rayfork"><img src="images/rayfork_logo.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
                 <!--<a href="https://rawgit.com/libretro/libretro-chailove/docs/index.html"><img src="images/chailovelogo.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>-->
                 <a href="https://github.com/Rabios/Pancake"><img src="images/pancake.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
-                <a href="https://dragonruby.org"><img src="images/dragonruby_icon.png" width="128" height="128" style="margin: 8px; padding: 8px;"></a>
             </div>
         </div>
         
