UPDATE: Removed Sololearn button as i'm no longer there...

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <a href="https://rabios.itch.io"><img src="images/itchio-textless-black.svg" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                 <a href="https://www.facebook.com/rabia.alhaffar.9"><img src="images/facebook.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
                 <a href="https://www.youtube.com/channel/UCAyNQlH9PxhYpXHukRmM-dg"><img src="images/youtube.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>     
-                <a href="https://www.sololearn.com/Profile/9046029"><img src="images/sololearn.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>
+                <!--<a href="https://www.sololearn.com/Profile/9046029"><img src="images/sololearn.png" width="96" height="96" style="margin: 8px; padding: 8px;"></a>-->
                 <br>
                 <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">Discord: Rabia Alhaffar#2114</a></p>
                 <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;" align="center">Email: <a href="mailto:steria773@gmail.com">steria773@gmail.com</a></p>
