--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="index.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;">STERIA773</a>
             <a href="projects.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">PROJECTS</button></a>
             <a href="games.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">GAMES</button></a>
+            <a href="contributions.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">CONTRIBUTIONS</button></a>
             <a href="blog.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">BLOG</button></a>
             <a href="about.html" style="font-family: 'pixelated'; color: white; font-size: 32px; margin: 8px;"><button style="background-color: purple; border: 2px purple solid; font-family: 'pixelated'; height: 100px; color: white; font-size: 22px;">MORE</button></a>
         </div>
@@ -25,7 +26,7 @@
             <p style="color: white; font-family: 'pixelated'; padding: 8px; font-size: 22px;">
             I'm Rabia Alhaffar, Syrian indie game developer and making games is my favourite hobby!
             <br><br>
-            I also work as front-end Web developer, And sometimes write softwares or make web things when i'm in right mood!
+            Also i write softwares or make web things when i'm in right mood!
             <br><br>
             I have a lot of nicknames like "Rabios" and "steria773", You call me what you want! ;)
             </p>
